@@ -231,7 +231,8 @@ def should_use_pdfjs(mimetype, url):
     is_download_url = (url.scheme() == 'blob' and
                        QUrl(url.path()).scheme() == 'qute')
     is_pdf = mimetype in ['application/pdf', 'application/x-pdf']
-    return is_pdf and not is_download_url and config.val.content.pdfjs
+    config_enabled = config.instance.get('content.pdfjs', url=url)
+    return is_pdf and not is_download_url and config_enabled
 
 
 def get_main_url(filename):
