@@ -47,6 +47,7 @@ Changed
   `:yank inline [{title}]({url})`.
 - Duplicate consecutive history entries with the same URL are now ignored.
 - More detailed error messages when spawning a process failed.
+- The `content.pdfjs` setting now supports domain patterns.
 
 Deprecated
 ~~~~~~~~~~
